<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28df99"
    tools:context=".Drink">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:onClick="gotoCart"
        android:src="@drawable/ic_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/drink1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="drinkChoice"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/drink1" />

                    <TextView
                        android:id="@+id/tv_harga1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga1" />
                    <TextView
                        android:id="@+id/tv_qty_temp1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/qty" />
                    <TextView
                        android:id="@+id/tv_qty1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/drink2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="drinkChoice"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:text="@string/drink2" />

                    <TextView
                        android:id="@+id/tv_harga2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga2" />
                    <TextView
                        android:id="@+id/tv_qty_temp2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/qty" />
                    <TextView
                        android:id="@+id/tv_qty2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/drink3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="drinkChoice"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:text="@string/drink3" />

                    <TextView
                        android:id="@+id/tv_harga3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga3" />

                    <TextView
                        android:id="@+id/tv_qty_temp3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/qty" />
                    <TextView
                        android:id="@+id/tv_qty3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/drink4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="drinkChoice"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:text="@string/drink4" />

                    <TextView
                        android:id="@+id/tv_harga4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga4" />
                    <TextView
                        android:id="@+id/tv_qty_temp4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/qty" />
                    <TextView
                        android:id="@+id/tv_qty4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/Home"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:onClick="home"
        android:src="@drawable/ic_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>