<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28df99"
    tools:context=".Complete">

    <TextView
        android:id="@+id/totalsemua2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="100dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="65dp"
        android:text="Balance :"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bal3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:background="#F6F7D4"
        android:onClick="home"
        android:text="Back to Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/drink1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/drink1" />

                    <TextView
                        android:id="@+id/tv_harga1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga1" />
                    <TextView
                        android:id="@+id/tv_qty1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Qty : 0" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/drink2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/drink2" />

                    <TextView
                        android:id="@+id/tv_harga2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga2" />
                    <TextView
                        android:id="@+id/tv_qty2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Qty : 0" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/drink3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/drink3" />

                    <TextView
                        android:id="@+id/tv_harga3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga3" />
                    <TextView
                        android:id="@+id/tv_qty3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Qty : 0" />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/drink4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/drink4" />

                    <TextView
                        android:id="@+id/tv_harga4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga4" />
                    <TextView
                        android:id="@+id/tv_qty4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Qty : 0" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>