<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#28df99"
    tools:context=".Cart">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="145dp"
        android:text="Balance :"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bal2" />

    <TextView
        android:id="@+id/bal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="145dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/home2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:onClick="home"
        android:src="@drawable/ic_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="#F6F7D4"
        android:onClick="payNow"
        android:text="Pay Now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="#F6F7D4"
        android:onClick="orderMore"
        android:text="@string/ordermore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="395dp"
        android:layout_height="497dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/drink1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink1"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/drink1" />

                    <TextView
                        android:id="@+id/tv_harga1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga1" />

                    <TextView
                        android:id="@+id/tv_qty1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Qty : 0" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_delete1"
                    android:layout_width="58dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="delete"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/drink2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink2"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/drink2" />

                    <TextView
                        android:id="@+id/tv_harga2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga2" />

                    <TextView
                        android:id="@+id/tv_qty2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Qty : 0" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_delete2"
                    android:layout_width="58dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="delete"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/drink3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink3"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/drink3" />

                    <TextView
                        android:id="@+id/tv_harga3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga3" />

                    <TextView
                        android:id="@+id/tv_qty3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Qty : 0" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_delete3"
                    android:layout_width="58dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="delete"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/drink4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_drink4"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:srcCompat="@drawable/drink" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_nama4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/drink4" />

                    <TextView
                        android:id="@+id/tv_harga4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/harga4" />

                    <TextView
                        android:id="@+id/tv_qty4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Qty : 0" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_delete4"
                    android:layout_width="58dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="delete"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/kosong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="28dp"
        android:text="@string/kosong"
        app:layout_constraintBottom_toTopOf="@+id/order_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/totalsemua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="145dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>